# Starling-Server

./: .gitignore  README.md  mypy.ini  pyproject.toml
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql
docs/: TransactionCounterparty.md  TransactionProcessor_flow.md  TransactionProcessor_sequence.md  design.mdj  design_0_1_1.mdj  sequence.md
docs/source/: conf.py  index.rst
src/: main.py
src/db/: db_base.py
src/providers/: api.py
src/server/: app.py  controller.py  database.py  routes.py
starling_server/: __init__.py  app.py  config.py  config.toml  config.yaml  main.py
starling_server/cli/: cli.py
starling_server/db/: db_base.py
starling_server/handlers/: account.py  account_handler.py  handler.py  transaction_handler.py
starling_server/mappers/: category_mapper.py
starling_server/providers/: api_base.py  provider.py  provider_api.py
starling_server/routes/: accounts.py  transactions.py
starling_server/schemas/: account.py
starling_server/server/: account.py  app.py  category_map.py  config_helper.py  controller.py  displayname_map.py  events.py  route_dispatcher.py  transaction_fetcher.py  transaction_processor.py
tests/: XXXconftest.py  conftest.py  test_app.py  test_routes.py
tests/db/: conftest.py  test_edgedb.py  test_route_dispatcher.py
tests/server/: test_account.py  test_account_handler.py  test_config_helper.py  test_displayname_map.py  test_route_dispatcher.py  test_transaction_fetcher.py  test_transaction_handler.py  (+2 more)
(+93 files in other folders)
