[tool.poetry]
name = "starling-server"
version = "0.1.0"
description = ""
authors = ["Richard <richlyon@mac.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.73.0"
motor = "2.5.1"
pydantic = {extras = ["email"], version = "^1.9.0"}
python-decouple = "3.6"
uvicorn = "0.17.4"
config-path = "^1.0.2"
httpx = "^0.22.0"


[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "^0.931"
requests = "^2.27.1"
pytest-asyncio = "^0.18.2"
asyncio = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
